# production-network-alpha

./: .gitignore  CITATION.cff  DATA_POLICY.md  Makefile  README.md  environment.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml  smoke.yml
artifacts/release_public/: PHASE7_0_DECISION_MEMO.md  README.md  phase7_0_10bps_candidate_ranking.csv  phase7_0_bootstrap_robustness.csv  phase7_0_phase6_1_vs_6_3_comparison.csv  phase7_0_quality_summary.json  phase7_0_robustness_decision_report.html  phase7_0_validation_diagnostics.csv  phase7_0_yearly_top_candidates.csv  release_manifest.csv
configs/: backtest.yml  data.yml  features.yml  model_lgbm.yml  model_tgn.yml  schema_map.yml
docs/: index.md  interviewer_briefing.md  methodology.md  release_notes.md  research_report.md  robustness.md
examples/synthetic_demo/: README.md  run_synthetic_demo.py  synthetic_edges.csv  synthetic_model_matrix.csv  synthetic_news_shocks.csv  synthetic_nodes.csv
scripts/: phase1_schema_drilldown.py  phase2_1_graph_qa_patch.py  phase2_graph_backbone.py  phase3_0_ravenpack_pilot.py  phase3_1_ravenpack_full_scale.py  phase4_0_labels_pilot.py  phase4_1_full_labels.py  phase4_2_model_ready_patch.py  phase5_0_modeling_pilot.py  phase5_1_modeling_full.py  phase6_0_backtest_pilot.py  phase6_1_backtest_full.py  phase6_2_turnover_pilot.py  phase6_3_turnover_full.py  phase7_0_robustness_report.py  push_to_github.sh  release_git_preflight.py  wrds_schema_discovery.py
sql/wrds_extract/: 01_crsp_daily_returns_template.sql  README.md  (+5 more)
tests/: test_no_vendor_data_policy.py  test_repo_smoke.py
(+4 files in other folders)
